<resources>
    <string name="app_name">YunkuAndroidSDK</string>
    <string name="tip_is_loading">Loading…</string>
    <string name="cancel">Cancel</string>
    <string name="file_list_empty">Empty Folder</string>

    <!-- userd in openning file -->
    <string name="title_open_image">Image open with</string>
    <string name="no_way_to_open_image">No app to open image</string>
    <string name="title_open_audio">Audio open with</string>
    <string name="no_way_to_open_audio">No app to open audio</string>
    <string name="title_open_video">Video open with</string>
    <string name="no_way_to_open_video">No app to open video</string>
    <string name="title_send_file">Send with</string>
    <string name="no_way_to_send_file">No app to send file</string>
    <string name="no_way_to_send_email">No app to send Email</string>
    <string name="no_way_to_send_message">No app to send SMS</string>
    <string name="title_open_file">File open with</string>
    <string name="no_way_to_open_file">No app to open this file</string>
    <string name="tip_file_not_exist">File not exist！</string>
    <string name="web_browser_not_find">Did not find opened browser</string>

    <!-- used in compress image -->
    <string name="out_of_memory">Out of memory</string>

    <!--date-->
    <string name="date_yesterday">Yesterday</string>
    <string name="date_monday">Monday</string>
    <string name="date_tuesday">Tuesday</string>
    <string name="date_wednesday">Wednesday</string>
    <string name="date_thursday">Thursday</string>
    <string name="date_friday">Friday</string>
    <string name="date_saturday">Saturday</string>
    <string name="date_sunday">Sunday</string>

    <string name="tip_open_file_with_excepiton">Occur a exception with opening file！</string>
    <string name="tip_content_has_change">Do you want to exit without saving?</string>
    <string name="tip_content_must_not_be_empty">Content must not be empty!</string>

    <string name="tip_upload_exception">Exception when uploading file,please try again!</string>
    <string name="file_list_header">Return</string>
    <string name="menu_add">Add</string>
    <string name="menu_folders">Folders</string>
    <string name="menu_files">Files</string>
    <string name="menu_take_photos">Take Photos</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_records">Records</string>
    <string name="move">Move</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="more">More</string>
    <string name="dialog_new_folder_hint">Input folder name</string>
    <string name="new_folder">New Folder</string>
    <string name="ok">OK</string>
    <string name="tip_is_creating">creating</string>
    <string name="tip_name_contain_special_char">Special char inside</string>
    <string name="tip_name_invalid_folder_name">Invalid folder name</string>
    <string name="tip_net_is_not_available">Network not available</string>
    <string name="tip_connect_server_failed">Connect server failded</string>
    <string name="tip_same_file_name_exist">Same file exist</string>
    <string name="confirm_to_delete">Are you sure to delete this file?</string>
    <string name="deleting">Deleting</string>
    <string name="copy_to">Copy to</string>
    <string name="move_to">Move to</string>
    <string name="tip_target_path_is_same_with_orginpath">Target path is same with origin path</string>
    <string name="tip_is_copying">Copying</string>
    <string name="tip_is_moving">Moving</string>
    <string name="rename">Rename</string>
    <string name="tip_audio_empty">No audio files</string>
    <string name="tip_img_empty">No image files</string>
    <string name="tip_video_empty">No video files</string>
    <string name="tip_doc_empty">No document files</string>
    <string name="format_find_many_in_total">Find %1$s files</string>
    <string name="all_select">All</string>
    <string name="finish">Finish</string>
    <string name="tip">Tip</string>
    <string name="tip_replace_for_same_file">Threse is same name file in folder,do you want overwrite it ?</string>
    <string name="replace">Replace</string>
    <string name="tip_upload_selected_file_list_error">You need select more than one item</string>
    <string name="tip_cant_copy_to_son_folder">Can\'t copy to son folder</string>
    <string name="tip_cant_move_to_son_folder">Can\'t move to son folder</string>
    <string name="dialog_rename_hint">Input file name</string>
    <string name="tip_is_renaming">Renaming</string>
    <string name="opening">opening</string>
    <string name="downloading">Downloading…</string>
    <string name="connecting">Connecting…</string>
    <string name="download_failed">Download failed</string>
    <string name="get_file_info_failed">Get file information failed</string>
    <string name="upload_type">Upload Type</string>
    <string name="uploading">Uploading…</string>
    <string name="upload_success">Upload complete</string>
    <string name="tip_is_handling">Handling…</string>
    <string name="notes_upload">Gknote</string>
    <string name="tip_no_available_device_to_take_audio">No available device to record audio！</string>
    <string name="image_file_name_format">\'IMG\'_yyyyMMdd_HHmmss</string>
    <string name="tip_no_available_device_to_take_camera">No available device to take photos！</string>
    <string name="gknote_name_format" translatable="false" >Note_%1$s.gknote</string>
    <string name="save">Save</string>
    <string name="load_more">Load More</string>

    <string name="send_to_another_app">Use another app to open</string>
    <string name="tip_is_preparing_for_data">Loading data…</string>
    <string name="tip_open_image_failed">Open image failed</string>
    <string name="format_the_lasttime_fixed_desc">%1$s Modify %2$s</string>
    <string name="tip_image_button">Check image</string>
    <string name="tip_image_format_nonsupport">Preview format is not supported</string>
    <string name="tip_image_loading_failed">Image loading failure</string>
    <string name="add_cellphone_photo">Add to photo album</string>
    <string name="toast_add_cellphone_photo_success">Picture has been saved to the phone album</string>
    <string name="toast_add_cellphone_photo_fail">Picture save failed</string>

    <string name="retry">Retry</string>
    <string name="preview_file_too_large">100M file is not allowed to preview</string>
    <string name="tip_no_preview_server_available">No available preview server</string>
    <string name="convert_error">Convert Error</string>
    <string name="tip_preview_file_download_failed">Preview file download failed</string>
    <string name="tip_connect_out_time">Connect out of time</string>
    <string name="new_gknote_name">Note name</string>

</resources>
